제목 문구 누락 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>✝ 月曜默示錄 ✝</title>
         <link href="./css/ds.css" rel="stylesheet" />
     </head>
     <body>
@@ -45,7 +45,7 @@
                 <li id="firstBtn" class="ds-trigger__wrap__list active dis-none">
                     <button id="dsTriggerBtn" type="button" onclick="Trigger()">
                         <span>
-                            <img src="/img//choa_gazell_thumb.png" alt="썸네일"/>
+                            <img src="/img/choa_gazell_thumb.png" alt="썸네일"/>
                         </span>
                     </button>
                 </li>
