--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li id="firstBtn" class="ds-trigger__wrap__list active dis-none">
                     <button id="dsTriggerBtn" type="button" onclick="Trigger()">
                         <span>
-                            <img src="/img/choa_gazell_thumb.png" alt="썸네일"/>
+                            <img src="./img/choa_gazell_thumb.png" alt="썸네일"/>
                         </span>
                     </button>
                 </li>
