--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,6 +8,7 @@
         <link href="./css/ds.css" rel="stylesheet" />
     </head>
     <body>
+        <main>
         <!-- 신성한 배경음악 -->
         <section id="bgmWrap">
             <audio id="bgm" controls autoplay loop><source src="./mp3/monday_bgm.mp3" type="audio/mp3"></audio>
@@ -91,7 +93,7 @@
                 </div>
             </div>
         </div>
-
+    </main>
 
 
 
@@ -101,5 +103,9 @@
         <script type="text/javascript" src="./js/monInteraction.js"></script>
         <!-- 3. 신성한 월요신경 기타 영역 -->
         <script type="text/javascript" src="./js/monETC.js"></script>
+
+        <section id="goPC">
+            <p>감히, 모바일로 보다니...<br/>얼른 PC로 영접하지 못할까...?</p>
+        </section>
     </body>
 </html>
